# trm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/trm/: config.py  main.py  training.py
src/trm/data/: sudoku.py  utils.py
src/trm/model/: backbones.py  trm.py  utils.py
